Simplify Some Code in Snapshotting (#41316)
* Just a few obvious simplifications and dead code removals